--- a/test.ipynb
+++ b/test.ipynb
@@ -37,7 +37,7 @@
     "from IPython.core.display import HTML\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "from src.surveymonkey import transform_surveymonkey\n",
+    "from spark_surveymonkey import transform_surveymonkey\n",
     "\n",
     "display(HTML(\"<style>pre { white-space: pre !important; }</style>\"))\n",
     "spark = SparkSession.builder.appName('spark-surveymonkey').getOrCreate()"
