--- a/examples/test_survey.ipynb
+++ b/examples/test_survey.ipynb
@@ -32,11 +32,9 @@
     "import json\n",
     "import pprint\n",
     "\n",
-    "from IPython.display import HTML\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
-    "from spark_surveymonkey import transform_survey\n",
-    "\n",
+    "from IPython.display import HTML\n",
     "display(HTML(\"<style>pre { white-space: pre !important; }</style>\"))"
    ]
   },
@@ -360,12 +358,12 @@
     }
    ],
    "source": [
-    "spark = SparkSession.builder.appName('example').getOrCreate()\n",
-    "path_responses = 'data/responses/'\n",
-    "with open('data/details.json') as f:\n",
-    "    details = json.load(f)\n",
+    "from spark_surveymonkey import transform_survey\n",
     "\n",
-    "df = transform_survey(spark, path_responses, details)\n",
+    "spark = SparkSession.builder.appName('example').getOrCreate()\n",
+    "\n",
+    "df = transform_survey(spark, 'data/responses/', 'data/details.json')\n",
+    "\n",
     "df.show()\n",
     "pprint.pprint(df.columns)"
    ]
@@ -442,11 +440,11 @@
     "from spark_surveymonkey import _transform\n",
     "\n",
     "print(\"Flatten JSON -> DataFrame, with expanded nodes for pages, questions, answers\")\n",
-    "df = _transform.flatten(spark, path_responses)\n",
+    "df = _transform.flatten(spark, 'data/responses/')\n",
     "df.show(10)\n",
     "\n",
     "print(\"Interpret questions/answers using details.json and infer structure\")\n",
-    "df = _transform.interpret(df, details)\n",
+    "df = _transform.interpret(df, 'data/details.json')\n",
     "df.show(10)\n",
     "\n",
     "print(\"Pivot to wide DataFrame (1 row per respondent)\")\n",
