--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -40,19 +40,32 @@
     "from pyspark.sql import SparkSession, functions as F\n",
     "from IPython.display import HTML\n",
     "\n",
+    "spark = SparkSession.builder.appName('test').getOrCreate()\n",
     "display(HTML(\"<style>pre { white-space: pre !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SURVEY_ID = 284955270  # Test Survey"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## All Surveys"
+    "## Survey Overview\n",
+    "This section assumes you have a SurveyMonkey Access Token (`ACCESS_TOKEN` in `.env`)\n",
+    "\n",
+    "To run notebook on Test Survey skip this section."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -93,12 +106,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pick Survey"
+    "### Download Survey"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,29 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[01;34mdata\u001b[00m\r\n",
-      "└── \u001b[01;34m284955270\u001b[00m\r\n",
-      "    ├── details.json\r\n",
-      "    ├── \u001b[01;34mresponses\u001b[00m\r\n",
-      "    │   ├── responses-00000.json\r\n",
-      "    │   ├── responses-00001.json\r\n",
-      "    │   ├── responses-00002.json\r\n",
-      "    │   └── responses-00003.json\r\n",
-      "    ├── \u001b[01;35mtest-survey-1.jpg\u001b[00m\r\n",
-      "    ├── \u001b[01;35mtest-survey-2.jpg\u001b[00m\r\n",
-      "    └── test-survey.pdf\r\n",
-      "\r\n",
-      "2 directories, 8 files\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!tree data"
    ]
@@ -150,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -242,13 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from spark_surveymonkey import _transform\n",
-    "\n",
-    "spark = SparkSession.builder.appName('test').getOrCreate()\n",
     "\n",
     "df_flatten = _transform.flatten(spark, f'data/{SURVEY_ID}/responses')\n",
     "df_interpret = _transform.interpret(df_flatten, f'data/{SURVEY_ID}/details.json')\n",
@@ -257,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -283,8 +274,8 @@
       "|11670854001|completed      |00001   |00007       |476164755  |matrix         |Matrix Scale - Multiple Responses                 |Option B |matrix_scale_multiple_responses_option_b                 |No                          |\n",
       "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |Option C |matrix_scale_multiple_responses_other_option_c           |Yes                         |\n",
       "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |Option A |matrix_scale_multiple_responses_other_option_a           |Yes                         |\n",
-      "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |Option B |matrix_scale_multiple_responses_other_option_b           |No                          |\n",
       "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |Option C |matrix_scale_multiple_responses_other_option_c           |No                          |\n",
+      "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |Option B |matrix_scale_multiple_responses_other_option_b           |No                          |\n",
       "|11670854001|completed      |00001   |00008       |476191619  |matrix         |Matrix Scale - Multiple Responses - Other         |null     |matrix_scale_multiple_responses_other_other              |Other for Question 7        |\n",
       "|11670854001|completed      |00001   |00009       |476164748  |open_ended     |Comment Box                                       |null     |comment_box                                              |Comment Text for Question 8 |\n",
       "|11670854001|completed      |00001   |00010       |476190673  |demographic    |Contact Information                               |Name     |contact_information_name                                 |John Smith                  |\n",
@@ -325,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
